# KKBox-Churn-Prediction-Challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: Kaggle_Baseline.ipynb  README.md
reports/: README.md
scripts/: download_kaggle_data.py  profile_data.py  train_baselines.py  validate_environment.py
src/churn_retention/: __init__.py  config.py  data.py  modeling.py  reporting.py
src/data/: churn_labeller.py
src/features/: baseline_features.py
src/inference/: __init__.py  baseline_submission.py
src/models/: baseline_xgb.py
src/utils/: paths.py
src/validation/: rolling.py
tests/: test_data.py  test_modeling.py  test_reporting.py
