[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-churn-retention-modeling"
version = "0.1.0"
description = "Subscription churn and OTT viewer drop-off modeling portfolio project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Davis" }]
dependencies = [
    "duckdb>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "kaggle>=1.6.17",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
